test/syntax/pass/constants.sync
let f x =
  let a = 5 in
  let b = 4.5 in
  let c = true in
  let d = false in
  let e = () in
  let f = "abc" in
  let g = 'a' in
  x
