test/syntax/fail/mismatch_type_in_args.sync
let node f (x : int) = x

let node g x = f true
